<resources>
    <string name="app_name">KerjaKu</string>
    <string name="error_no_location">Lokasi tidak tersedia</string>
    <string name="gps_dialog_message">Hidupkan GPS Perangkat Anda untuk membagikan lokasi!</string>
    <string name="gps_dialog_tittle">Maaf, GPS perangkat anda belum aktif.</string>
    <string name="dialog_positive_button">Next</string>
    <string name="selfie_image">Foto Selfie</string>
    <string name="camera">Kamera</string>
    <string name="upload">Upload</string>
    <string name="image_logo">Logo Aplikasi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="login">Login</string>
    <string name="label_signup">Belum punya akun?</string>
    <string name="signup">Daftar</string>
    <string name="edt_name_hint">Masukkan Nama Anda</string>
    <string name="edt_email_hint">Masukkan Email Anda</string>
    <string name="edt_password_hint">Masukkan Password Anda</string>
    <string name="invalid_email">Alamat Email Tidak Valid</string>
    <string name="invalid_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="title_signup_page">Segera lengkapi data dirimu untuk membuat akun baru!</string>
    <string name="register_failed">Register gagal, masukkan data dengan benar!</string>
    <string name="login_failed">Login gagal! Masukkan email dan password yang benar!</string>
    <string name="login_failed_dialog">Login gagal! Masukkan data email dan password dengan benar.</string>
    <string name="login_failed_dialog_title">Maaf!</string>
    <string name="register_dialog_message">Akun berhasil dibuat.</string>
    <string name="default_time">--:--</string>
    <string name="clock_out">Clock Out</string>
    <string name="id">Nomor Id</string>
    <string name="Clock_Image">Gambar Jam</string>
    <string name="day_date_format">%1$s, %2$s</string>
    <string name="name_placeholder">Nama: %s</string>
    <string name="id_placeholder">Nomor ID: %s</string>
    <string name="day_date_placeholder">Hari, Tanggal: %s</string>
    <string name="time_placeholder">Waktu: %s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_services">Services</string>
    <string name="title_profile">Profile</string>
    <string name="jenis_pengeluaran">Jenis Pengeluaran</string>
    <string name="nominal_pengeluaran">Pengeluaran</string>
    <string name="keterangan">Keterangan</string>
    <string name="simpan">Ajukan Reimbursement</string>
    <string name="upload_foto">Upload Bukti</string>
    <string name="tanggal_pengeluaran">Tanggal Pengeluaran</string>
    <string name="upload_foto_pegawai">Upload Foto Pegawai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_services_admin">Services Admin</string>
    <string name="title_services_employee">Services Employee</string>
</resources>