<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reimbursement.ReimbursementActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/tv_jenis_pengeluaran"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_pengeluaran"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_jenis_pengeluaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_jenis_pengeluaran" />

        <TextView
            android:id="@+id/tv_pengeluaran"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nominal_pengeluaran"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_jenis_pengeluaran" />

        <TextView
            android:id="@+id/tv_rupiah"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp."
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/edt_nominal_pengeluaran"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pengeluaran" />

        <EditText
            android:id="@+id/edt_nominal_pengeluaran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Masukkan nominal pengeluaran"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_rupiah"
            app:layout_constraintTop_toBottomOf="@+id/tv_pengeluaran" />

        <TextView
            android:id="@+id/tv_keterangan"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/keterangan"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_nominal_pengeluaran" />

        <EditText
            android:id="@+id/edt_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Masukkan keterangan pengeluaran"
            android:maxLines="3"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_keterangan" />

        <TextView
            android:id="@+id/tv_tanggal_pengeluaran"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tanggal_pengeluaran"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_keterangan" />

        <!--on below line we are creating
        a button for date picker-->
        <Button
            android:id="@+id/btn_date_picker"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Pilih Tanggal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal_pengeluaran" />

        <!--on below line we are creating a text view-->
        <TextView
            android:id="@+id/tv_selected_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Tanggal"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_date_picker"
            app:layout_constraintStart_toEndOf="@+id/btn_date_picker"
            app:layout_constraintTop_toTopOf="@+id/btn_date_picker" />

        <Button
            android:id="@+id/btn_upload_bukti"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/upload_foto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_date_picker" />

        <ImageView
            android:id="@+id/iv_preview_bukti"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload_bukti"
            app:srcCompat="@drawable/ic_image_placeholder" />

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/simpan"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview_bukti"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>